fix: pokemon images now won't create layout shifts

--- a/src/components/PokemonCard/PokemonCard.module.scss
+++ b/src/components/PokemonCard/PokemonCard.module.scss
@@ -11,7 +11,8 @@
 }
 
 .pokeCard__image--size {
-  max-width: 100px;
+  width: 100px;
+  height: 100px;
 }
 
 .pokeCard {
@@ -66,7 +67,8 @@
   }
 
   &__image--size {
-    max-width: 180px;
+    width: 180px;
+    height: 180px;
   }
 
   &__stats {
